--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">dataBinding20210910</string>
+    <string name="facebook_app_id">536018324174455</string>
+    <string name="fb_login_protocol_scheme">fb536018324174455</string>
+
 </resources>
