약속 삭제 구현, 새로고침 미적용

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">dataBinding20210910</string>
+    <string name="app_name">약속앱-YBJ</string>
     <string name="facebook_app_id">536018324174455</string>
     <string name="fb_login_protocol_scheme">fb536018324174455</string>
     <!-- TODO: Remove or change this placeholder text -->
