--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="naver_client_id">wFI2BMKFoFviGHV4qjzX</string>
+    <string name="naver_secret_key">8PdCwutte0</string>
+    <string name="naver_client_name">약속앱</string>
+
+
 </resources>
