회원탈퇴 기능 추가 회원가입 시 이메일 양식 지정하는거 코드 다시 붙임 숫자 안되던거 되게 함

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="naver_client_id">wFI2BMKFoFviGHV4qjzX</string>
     <string name="naver_secret_key">8PdCwutte0</string>
     <string name="naver_client_name">약속앱</string>
+    <string name="confirm">"동의"</string>
 
 
 </resources>
